--- a/Makefile.nx
+++ b/Makefile.nx
@@ -46,7 +46,7 @@ ROMFS	:=	romfs
 
 DIST_PATH	:=	$(TARGET)_v$(APP_VERSION)
 
-APP_AUTHOR	:=	switchbrew
+APP_AUTHOR	:=	switchbrew/mod_glitched-nx 
 
 #---------------------------------------------------------------------------------
 # options for code generation
